# seekcode

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml  pr-check.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  config.rs  context.rs  event.rs  lib.rs  runner.rs  task.rs  tests.rs
crates/app-kernel/: Cargo.toml
crates/app-kernel/src/: compaction.rs  config.rs  context.rs  events.rs  kernel.rs  lib.rs  session_service.rs  test_support.rs  title.rs  tool_call_display.rs  types.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/deepseek-client/: Cargo.toml
crates/deepseek-client/src/: client.rs  dto.rs  lib.rs  provider.rs  sse.rs  thinking.rs  tool_calls.rs
crates/evals/: Cargo.toml
crates/evals/src/: lib.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: lib.rs
crates/model-provider/: Cargo.toml
crates/model-provider/src/: lib.rs
crates/patch-engine/: Cargo.toml
crates/patch-engine/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/shell-sandbox/: Cargo.toml
crates/shell-sandbox/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: audit_store.rs  lib.rs  migrations.rs  model_call_store.rs  models.rs  rows.rs  session_context_store.rs  session_store.rs  sqlite.rs  tests.rs  time.rs  traits.rs  workspace_store.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/tool-system/: Cargo.toml
crates/tool-system/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
src/: App.jsx  constants.js  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  state.rs  tray.rs
src/components/: CloseBehaviorDialog.jsx  MessageBubble.jsx  SettingsView.jsx  WorkspacePanel.jsx
src/lib/: format.js  format.test.js  id.js  messages.js  messages.test.js  models.js  sessionMessages.js  sessionMessages.test.js  sessionSearch.js  transcriptScroll.js  transcriptScroll.test.js  workspaceCollapse.js  workspaces.js
src/styles/: animations.css  base.css  buttons.css  composer.css  layout.css  markdown.css  model-picker.css  navigation.css  overlays.css  reasoning.css  settings.css  tooling.css  transcript.css  workspace-panel.css
