[package]
name = "seekcode-agent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
seekcode-common.workspace = true
seekcode-model-provider.workspace = true
seekcode-tool-system.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
