[package]
name = "seekcode-app-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
seekcode-agent-core.workspace = true
seekcode-common.workspace = true
seekcode-deepseek-client.workspace = true
seekcode-storage.workspace = true
seekcode-tool-system.workspace = true
chrono.workspace = true
iana-time-zone.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
futures-util.workspace = true
