[package]
name = "seekcode-model-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
seekcode-common.workspace = true
serde.workspace = true
serde_json.workspace = true
