[package]
name = "seekcode-tool-system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
schemars.workspace = true
seekcode-common.workspace = true
seekcode-deepseek-client.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
